Added onboarding and tweaked shelves adding/event logging
